Fix preserving FHS dirs
(cherry picked from commit d43b732b6326418e1df3c2f88165bb351fe98d99)

--- a/integration/dockerfiles-with-context/issue-960/Dockerfile
+++ b/integration/dockerfiles-with-context/issue-960/Dockerfile
@@ -1,5 +1,10 @@
 FROM alpine:3.14 as rootfs
 RUN echo 7777
+RUN rm -f /var/run \
+ && mkdir -p /var/run/foo \
+ && touch /var/run/foo/bar
 
 FROM alpine:3.14
 COPY --from=rootfs / /sysroot/
+RUN find /sysroot/dev/ /sysroot/sys/ /sysroot/var/run/ -mindepth 1 > /tmp/list \
+ && ! grep . /tmp/list
